tests/errors/array_constructor_with_integer_real_array_types.f90
program array_constructor_with_integer_real_array_types
    print *, [1, [1., 2.]]
end program
